--- a/Attractions.html
+++ b/Attractions.html
@@ -52,8 +52,8 @@
 				<li><a href="Attractions.html">Attractions</a></li>
 				<li><a href="#">Contact Us</a></li>
                 <li><a href="Bookings.html">Bookings</a></li>
-				<button><a href="#">Members Login</a></button>
-				<button><a href="#">Register/<br>SignUp</a></button>
+				<button><a href="Login.php">Members Login</a></button>
+				<button><a href="signup.html">Register/<br>SignUp</a></button>
 			</ul>
 		</div>
     </nav>
